--- a/views/index.slim
+++ b/views/index.slim
@@ -1,3 +1,13 @@
 - content_for :title do "This is :index title" end
 
 h1.text-center = @say
+
+table.table.table-condensed
+  tr
+    th id
+    th date
+
+  - @users.each do |usr|
+    tr
+      td = usr.registration_id
+      td = usr.created_at
